tests/trybuild/entities/same_components.stderr
error[E0308]: mismatched types
 --> tests/trybuild/entities/same_components.rs:9:42
  |
9 |     let entities = entities!((A, B), (A, C));
  |                                          ^ expected `B`, found `C`
